...
        android:id="@+id/profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="Profile"/>

    <item
        android:id="@+id/experience"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_work_24"
        android:title="Skill"/>

</menu>
